# c-v

./: CMakeLists.txt  README.md  clean.sh  make.sh
server/: CMakeLists.txt  generator.cpp  generator.h  messager.cpp  messager.h  server.cpp
view/: CMakeLists.txt  messager.cpp  messager.h  view.cpp  view.h  widget.cpp  widget.h
